--- a/alpine_base-php8/Dockerfile
+++ b/alpine_base-php8/Dockerfile
@@ -2,12 +2,10 @@ FROM alpine:3.16
 
 # Update OS & install packages
 RUN apk update && apk upgrade
-RUN apk add supervisor bash bash-completion git composer apache2-proxy php8-fpm php8-bcmath php8-ctype php8-curl php8-dom php8-exif php8-fileinfo php8-ftp php8-gd php8-iconv php8-pecl-imagick php8-intl php8-mbstring php8-pecl-mcrypt php8-mysqli php8-pdo_mysql php8-pdo_sqlite php8-phar php8-posix php8-session php8-simplexml php8-sockets php8-sodium php8-sqlite3 php8-tokenizer php8-pecl-ssh2 php8-xml php8-xmlreader php8-xmlwriter php8-zip
+RUN apk add supervisor bash bash-completion git composer apache2 php8 php8-apache2 php8-bcmath php8-ctype php8-curl php8-dom php8-exif php8-fileinfo php8-ftp php8-gd php8-iconv php8-pecl-imagick php8-intl php8-mbstring php8-pecl-mcrypt php8-mysqli php8-pdo_mysql php8-pdo_sqlite php8-phar php8-posix php8-session php8-simplexml php8-sockets php8-sodium php8-sqlite3 php8-tokenizer php8-pecl-ssh2 php8-xml php8-xmlreader php8-xmlwriter php8-zip
 
 
 # Configure Apache
-RUN sed -i 's|#LoadModule mpm_event_module modules/mod_mpm_event.so|LoadModule mpm_event_module modules/mod_mpm_event.so|g' /etc/apache2/httpd.conf
-RUN sed -i 's|LoadModule mpm_prefork_module modules/mod_mpm_prefork.so|#LoadModule mpm_prefork_module modules/mod_mpm_prefork.so|g' /etc/apache2/httpd.conf
 RUN sed -i 's|#LoadModule deflate_module modules/mod_deflate.so|LoadModule deflate_module modules/mod_deflate.so|g' /etc/apache2/httpd.conf
 RUN sed -i 's|#LoadModule rewrite_module modules/mod_rewrite.so|LoadModule rewrite_module modules/mod_rewrite.so|g' /etc/apache2/httpd.conf
 
@@ -19,7 +17,7 @@ RUN sed -i 's|    ScriptAlias /cgi-bin/ "/var/www/localhost/cgi-bin/"|    #Scrip
 RUN sed -i 's|Group apache|Group www-data|g' /etc/apache2/httpd.conf
 
 RUN sed -i 's|ServerTokens OS|ServerTokens Prod|g' /etc/apache2/httpd.conf
-RUN sed -i 's|ServerTokens OS|ServerTokens Prod|g' /etc/apache2/httpd.conf
+RUN sed -i 's|ServerSignature On|ServerSignature Off|g' /etc/apache2/httpd.conf
 
 RUN rm /etc/apache2/conf.d/info.conf
 RUN rm /etc/apache2/conf.d/userdir.conf
@@ -35,20 +33,11 @@ RUN rm -rf /var/www/localhost
 
 
 # Configure php-fpm
-RUN echo '<FilesMatch \.php$>' > /etc/apache2/conf.d/php8-module.conf
-RUN echo '    SetHandler "proxy:fcgi://127.0.0.1:9000"' >> /etc/apache2/conf.d/php8-module.conf
-RUN echo '</FilesMatch>' >> /etc/apache2/conf.d/php8-module.conf
-RUN echo 'DirectoryIndex index.html index.htm index.php' >> /etc/apache2/conf.d/php8-module.conf
-
 RUN sed -i 's|expose_php = On|expose_php = Off|g' /etc/php8/php.ini
 RUN sed -i 's|upload_max_filesize = 2M|upload_max_filesize = 64M|g' /etc/php8/php.ini
 RUN sed -i 's|post_max_size = 8M|post_max_size = 64M|g' /etc/php8/php.ini
 RUN sed -i 's|output_buffering = 4096|output_buffering = Off|g' /etc/php8/php.ini
 RUN sed -i 's|;upload_tmp_dir =|upload_tmp_dir = /tmp|g' /etc/php8/php.ini
-
-
-RUN sed -i 's|group = nobody|group = www-data|g' /etc/php8/php-fpm.d/www.conf
-RUN mkdir /var/run/php
 
 
 # Configure supervisord
@@ -57,7 +46,6 @@ RUN mkdir /etc/supervisor.d
 COPY etc/supervisor/supervisord.conf /etc/supervisord.conf
 COPY etc/supervisor/00-firstboot.conf /etc/supervisor.d/00-firstboot.conf
 COPY etc/supervisor/01-apache.conf /etc/supervisor.d/01-apache.conf
-COPY etc/supervisor/02-php-fpm.conf /etc/supervisor.d/02-php-fpm.conf
 
 
 # Copy startup script
